@@ -1,6 +1,3 @@
-# CACHE DIRECTORY
-# cache.path=c:\\cachetagscache
-
 # CACHE IN MEMORY
 cache.memory=true
 
