@@ -1,8 +1,8 @@
-# CACHE DIRECTORY
-cache.path=/tmp/cachetagscache
-
 # CACHE IN MEMORY
 cache.memory=false
 
 # CACHE PERSISTENCE CLASS
 cache.persistence.class=com.opensymphony.oscache.plugins.diskpersistence.DiskPersistenceListener
+
+# CACHE DIRECTORY
+cache.path=/tmp/cachetagscache
